--- a/app/css/wave.less
+++ b/app/css/wave.less
@@ -4,4 +4,37 @@
   width: 80%;
   height: 70%;
   background: @base;
+  position: relative;
+
+  .playback-controls {
+    position: absolute;
+    top: 1rem;
+    left: 50%;
+
+    .fa {
+      cursor: pointer;
+    }
+    
+    .fa::before {
+      font-size: 2.3rem;
+      margin: 0 1rem;
+    }
+  }
+}
+
+.tools {
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 5rem;
+  bottom: 0;
+  left: 0;
+  background: @dark;
+  border-top: 1px solid @dark-red;
+
+  li {
+    margin: 0 5%;
+    cursor: pointer;
+  }
+
 }
