--- a/app/css/main.less
+++ b/app/css/main.less
@@ -14,7 +14,7 @@ html, body {
   width: 100%;
   height: 100%;
   color: @text;
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .fa::before {
@@ -36,4 +36,8 @@ ul {
 
 .hidden {
   display: none;
+}
+
+.tools li {
+  display: inline-block;
 }
