--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1988,7 +1988,7 @@ body {
   width: 100%;
   height: 100%;
   color: #f5f5f5;
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu', sans-serif;
 }
 .fa::before {
   margin-right: 1rem;
@@ -2005,4 +2005,7 @@ ul {
 }
 .hidden {
   display: none;
+}
+.tools li {
+  display: inline-block;
 }
